homepage prop added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hp-world",
+  "homepage": "https://romsendz.github.io/hp-world",
   "private": true,
   "version": "0.0.0",
   "type": "module",
