--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18next-browser-languagedetector": "^8.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-router": "^7.1.1"
   },
   "devDependencies": {
