--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass-embedded": "^1.83.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
