--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
     "vite-plugin-svgr": "^4.3.0"
+  },
+  "engines": {
+    "node": ">=22.11.0"
   }
 }
